lib_LTLIBRARIES = libpeter.la
libpeter_la_SOURCES = exports.c exports.h imports.c imports.h hdrs.c hdrs.h misc.c misc.h sections.c sections.h pe.h peter.h
include_HEADERS = exports.h imports.h hdrs.h misc.h sections.h pe.h peter.h
libpeter_la_LDFLAGS = -version-info 0:0:0
libpeter_la_CFLAGS = -I./include -ggdb
